add vendor registration form

--- a/partner.html
+++ b/partner.html
@@ -241,6 +241,295 @@
 		</section>
 		<!--/Breadcrumb-->
 
+		<!-- Vendor Registration -->
+		<section class="sptb">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="card">
+							<div class="card-header">
+								Vendor Registration
+							</div>
+							<div class="card-body">
+								<div class="container">
+									<div class="p-5 border">
+										<h4 class="mb-4 font-weight-bold">Personal Information</h4>
+										<form class="form-horizontal">
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label" for="name">Vendor Name</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" name="name" class="form-control" id="managerNmae"  placeholder="Enter Name">
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label" for="gender">Gender</label>
+													</div>
+													<div class="col-md-9">
+														<select class="form-control">
+															<option selected>Select Gender</option>
+															<option value="male">Male</option>
+															<option value="female">Female</option>
+															<option value="others">Others</option>
+														</select>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Date Of Birth</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" class="form-control" data-inputmask="'mask': '99/99/9999'" placeholder="Enter DOB">
+														<span class="form-control-feedback right" aria-hidden="true"></span>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Profile Image</label>
+													</div>
+													<div class="col-md-9">
+														<input type="file" class="custom-file-input" name="example-file-input-custom">
+														<label class="custom-file-label">Choose file</label>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label" for="name">Qualification</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" name="name" class="form-control" id="managerNmae"  placeholder="Enter Qualification">
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Id Proof</label>
+													</div>
+													<div class="col-md-9">
+														<input type="file" class="custom-file-input" name="example-file-input-custom">
+														<label class="custom-file-label">Choose file</label>
+													</div>
+												</div>
+											</div>
+
+											<h4 class="mb-4 font-weight-bold">Official Information</h4>
+											<div class="form-group">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Date Of Joining</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" class="form-control" data-inputmask="'mask': '99/99/9999'" placeholder="Enter DOB">
+														<span class="form-control-feedback right" aria-hidden="true"></span>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Department</label>
+													</div>
+													<div class="col-md-9">
+														<select class="form-control">
+															<option selected>Select Department</option>
+															<option value="account">Account</option>
+															<option value="manager">Manager</option>
+														</select>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Priority</label>
+													</div>
+													<div class="col-md-9">
+														<select class="form-control">
+															<option selected>Select Priority</option>
+															<option value="account">Single</option>
+															<option value="manager">Team</option>
+														</select>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Work Area</label>
+													</div>
+													<div class="col-md-9">
+														<select class="form-control select2" data-placeholder="Choose Browser" multiple>
+															<option value="Firefox">
+																Branch 1
+															</option>
+															<option value="Chrome selected">
+																Branch 2
+															</option>
+														</select>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label" for="name">Working Pin Code</label>
+													</div>
+													<div class="col-md-9">
+														<input type="number" name="name" class="form-control" id="managerNmae"  placeholder="Enter Working Pin">
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Working Days</label>
+													</div>
+													<div class="col-md-9">
+														<div class="input-group">
+															<div class="input-group-prepend">
+																<div class="input-group-text">
+																	<i class="fa fa-calendar tx-16 lh-0 op-6"></i>
+																</div>
+															</div><input class="form-control fc-datepicker" placeholder="MM/DD/YYYY" type="text">
+														</div>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Working Time-In</label>
+													</div>
+													<div class="col-md-9">
+														<div class="input-group">
+															<div class="input-group-prepend">
+																<div class="input-group-text">
+																	<i class="fa fa-clock-o tx-16 lh-0 op-6"></i>
+																</div>
+															</div><!-- input-group-prepend -->
+															<input class="form-control" id="tpBasic" placeholder="Set time" type="text">
+														</div>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Working Time-Out</label>
+													</div>
+													<div class="col-md-9">
+														<div class="input-group">
+															<div class="input-group-prepend">
+																<div class="input-group-text">
+																	<i class="fa fa-clock-o tx-16 lh-0 op-6"></i>
+																</div>
+															</div><!-- input-group-prepend -->
+															<input class="form-control" id="tpBasic" placeholder="Set time" type="text">
+														</div>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Account Number</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" class="form-control" data-inputmask="'mask' : '9999-9999-9999-9999'" placeholder="Enter Account Number">
+														<span class=" form-control-feedback right" aria-hidden="true"></span>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label" for="name">IFSC Code</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" name="name" class="form-control" id="managerNmae"  placeholder="Enter IFSC Code">
+													</div>
+												</div>
+											</div>
+
+											<h4 class="mb-4 font-weight-bold">Contact Information</h4>
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Email Address</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" class="form-control"  placeholder="info@Claylist.in">
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Phone Number</label>
+													</div>
+													<div class="col-md-9">
+														<input type="text" class="form-control" data-inputmask="'mask' : '(999) 999-9999'" placeholder="Enter Phone Number">
+														<span class=" form-control-feedback right" aria-hidden="true"></span>
+													</div>
+												</div>
+											</div>
+
+											<div class="form-group ">
+												<div class="row">
+													<div class="col-md-3">
+														<label class="form-label">Address</label>
+													</div>
+													<div class="col-md-9">
+														<textarea class="form-control" name="example-textarea-input" rows="4" placeholder="Address.."></textarea>
+													</div>
+												</div>
+											</div>
+
+											<div class="row mt-5">
+												<div class="col-lg-4"></div>
+												<div class="col-lg-4">
+													<button type="submit" class="btn btn-primary waves-effect waves-light btn-block">Register</button>
+												</div>
+												<div class="col-lg-4"></div>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End vendor Registration -->
+
 		<!--Footer Section-->
 		<section>
 			<footer class="bg-dark-purple text-white">
