update manager section

--- a/manager/new_partner.html
+++ b/manager/new_partner.html
@@ -20,7 +20,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico" />
 
         <!-- Title -->
-        <title>Add vendor | Moseva</title>
+        <title>Partners | Moseva</title>
         <link rel="stylesheet" href="../assets/fonts/fonts/font-awesome.min.css">
 
         <!-- Sidemenu Css -->
@@ -179,7 +179,7 @@
                             </div>
                             <div class="user-info">
                                 <h2>Name</h2>
-                                <span>Admin</span>
+                                <span>Manager</span>
                             </div>
                         </div>
                     </div>
@@ -187,97 +187,59 @@
                         <li class="slide">
                             <a class="side-menu__item" href="index.html"><i class="side-menu__icon fa fa-tachometer"></i><span class="side-menu__label">Dashboard</span></a>
                         </li>
+
                         <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-sitemap"></i><span class="side-menu__label">Moseva Branches</span><i class="angle fa fa-angle-right"></i></a>
+                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-group"></i><span class="side-menu__label">Partners</span><i class="angle fa fa-angle-right"></i></a>
                             <ul class="slide-menu">
                                 <li>
-                                    <a href="branch_lists.html" class="slide-item">Branch Lists</a>
+                                    <a href="partner_lists.html" class="slide-item">Partner Lists</a>
                                 </li>
                                 <li>
-                                    <a href="pin_code.html" class="slide-item">Add Pin Code</a>
-                                </li>
-                                <li>
-                                    <a href="new_branch.html" class="slide-item">New Branch</a>
+                                    <a href="new_partner.html" class="slide-item">New Partner</a>
                                 </li>
                             </ul>
                         </li>
+
                         <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-cubes"></i><span class="side-menu__label">Categories</span><i class="angle fa fa-angle-right"></i></a>
+                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-first-order"></i><span class="side-menu__label">Order Status</span><i class="angle fa fa-angle-right"></i></a>
                             <ul class="slide-menu">
                                 <li>
-                                    <a href="category_lists.html" class="slide-item">Category Lists</a>
+                                    <a href="new_order.html" class="slide-item">New Order</a>
                                 </li>
                                 <li>
-                                    <a href="new_category.html" class="slide-item">New Category</a>
+                                    <a href="pending_order.html" class="slide-item">Pending Order</a>
+                                </li>
+                                <li>
+                                    <a href="assign_order.html" class="slide-item">Assign Order</a>
+                                </li>
+                                <li>
+                                    <a href="repair_order.html" class="slide-item">Repair Order</a>
+                                </li>
+                                <li>
+                                    <a href="working_order.html" class="slide-item">Working Order</a>
+                                </li>
+                                <li>
+                                    <a href="spare_parts.html" class="slide-item">Spare Parts</a>
+                                </li>
+                                <li>
+                                    <a href="completed_oreder.html" class="slide-item">Completed Order</a>
                                 </li>
                             </ul>
                         </li>
+
                         <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-shopping-bag"></i><span class="side-menu__label">Services</span><i class="angle fa fa-angle-right"></i></a>
-                            <ul class="slide-menu">
-                                <li>
-                                    <a href="service_lists.html" class="slide-item">Service Lists</a>
-                                </li>
-                                <li>
-                                    <a href="new_service.html" class="slide-item">New Service</a>
-                                </li>
-                            </ul>
+                            <a class="side-menu__item" href="order_assignment.html"><i class="side-menu__icon fa fa-ravelry"></i><span class="side-menu__label">Order Assignment</span></a>
                         </li>
+
                         <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-user"></i><span class="side-menu__label">Managers</span><i class="angle fa fa-angle-right"></i></a>
-                            <ul class="slide-menu">
-                                <li>
-                                    <a href="manager_lists.html" class="slide-item">Manager Lists</a>
-                                </li>
-                                <li>
-                                    <a href="new_manager.html" class="slide-item">New Manager</a>
-                                </li>
-                            </ul>
+                            <a class="side-menu__item" href="dispute.html"><i class="side-menu__icon fa fa-comments-o"></i><span class="side-menu__label">Dispute</span></a>
                         </li>
+
                         <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-group"></i><span class="side-menu__label">Vendors</span><i class="angle fa fa-angle-right"></i></a>
+                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-file-pdf-o"></i><span class="side-menu__label">Reports</span><i class="angle fa fa-angle-right"></i></a>
                             <ul class="slide-menu">
                                 <li>
-                                    <a href="vendor_lists.html" class="slide-item">Vendor Lists</a>
-                                </li>
-                                <li>
-                                    <a href="new_vendor.html" class="slide-item">New Vendor</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-circle-o"></i><span class="side-menu__label">Users</span><i class="angle fa fa-angle-right"></i></a>
-                            <ul class="slide-menu">
-                                <li>
-                                    <a href="user_lists.html" class="slide-item">User Lists</a>
-                                </li>
-                                <li>
-                                    <a href="manage_users.html" class="slide-item">Manage Users</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-database"></i><span class="side-menu__label">Accounts & Tax</span><i class="angle fa fa-angle-right"></i></a>
-                            <ul class="slide-menu">
-                                <li>
-                                    <a href="#!" class="slide-item">MIC Reports</a>
-                                </li>
-                                <li>
-                                    <a href="#!" class="slide-item">Sales Analytic Reports</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="slide">
-                            <a class="side-menu__item" data-toggle="slide" href="#"><i class="side-menu__icon fa fa-clone"></i><span class="side-menu__label">Manage Pages</span><i class="angle fa fa-angle-right"></i></a>
-                            <ul class="slide-menu">
-                                <li>
-                                    <a href="#!" class="slide-item">About</a>
-                                </li>
-                                <li>
-                                    <a href="#!" class="slide-item">Price Lists</a>
-                                </li>
-                                <li>
-                                    <a href="#!" class="slide-item">Offers</a>
+                                    <a href="#!" class="slide-item">Final Bill</a>
                                 </li>
                             </ul>
                         </li>
@@ -288,10 +250,10 @@
 				<div class="app-content  my-3 my-md-5">
                     <div class="side-app">
                         <div class="page-header">
-                            <h4 class="page-title">Vendors</h4>
+                            <h4 class="page-title">Partner</h4>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">New Vendor</li>
+                                <li class="breadcrumb-item active" aria-current="page">New Partner</li>
                             </ol>
                         </div>
         
@@ -301,10 +263,10 @@
                                     <div class=" ">
                                         <ul class="nav nav-pills">
                                             <li class="nav-item m-2">
-                                                <a class="nav-link btn btn-light" href="vendor_lists.html">All Lists</a>
+                                                <a class="nav-link btn btn-light" href="partner_lists.html">All Lists</a>
                                             </li>
                                             <li class="nav-item m-2">
-                                                <a class="nav-link btn btn-primary" href="new_vendor.html">ADD Vendor</a>
+                                                <a class="nav-link btn btn-primary" href="new_partner.html">ADD Partner</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -312,7 +274,7 @@
         
                                 <div class="card">
                                     <div class="card-header">
-                                        Add New Vendor
+                                        Add New Partner
                                     </div>
                                     <div class="card-body">
                                         <div class="container">
@@ -322,7 +284,7 @@
                                                     <div class="form-group ">
                                                         <div class="row">
                                                             <div class="col-md-3">
-                                                                <label class="form-label" for="name">Vendor Name</label>
+                                                                <label class="form-label" for="name">Partner Name</label>
                                                             </div>
                                                             <div class="col-md-9">
                                                                 <input type="text" name="name" class="form-control" id="managerNmae"  placeholder="Enter Name">
@@ -593,7 +555,6 @@
                     </div>
                 </div>
                 <!-- End Variable Content -->
-
 			</div>
 
 			<!--footer-->
